pkg/api-server/testdata/resources/inspect/dataplanes/_rules/proxyconfig_shadow-false.golden.json
{
 "xds": {
  "type.googleapis.com/envoy.config.cluster.v3.Cluster": {
   "self_inbound_dp_8080": {
    "name": "self_inbound_dp_8080",
    "type": "STATIC",
    "connectTimeout": "10s",
    "loadAssignment": {
     "clusterName": "self_inbound_dp_8080",
     "endpoints": [
      {
       "lbEndpoints": [
        {
         "endpoint": {
          "address": {
           "socketAddress": {
            "address": "127.0.0.1",
            "portValue": 8080
           }
          }
         }
        }
       ]
      }
     ]
    },
    "circuitBreakers": {
     "thresholds": [
      {
       "trackRemaining": true
      }
     ]
    }
   }
  },
  "type.googleapis.com/envoy.config.listener.v3.Listener": {
   "self_inbound_dp_8080": {
    "name": "self_inbound_dp_8080",
    "address": {
     "socketAddress": {
      "address": "127.0.0.1",
      "portValue": 8080
     }
    },
    "statPrefix": "self_inbound_dp_8080",
    "filterChains": [
     {
      "filters": [
       {
        "name": "envoy.filters.network.tcp_proxy",
        "typedConfig": {
         "@type": "type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy",
         "statPrefix": "self_inbound_dp_8080",
         "cluster": "self_inbound_dp_8080",
         "idleTimeout": "7200s"
        }
       }
      ]
     }
    ],
    "metadata": {
     "filterMetadata": {
      "io.kuma.tags": {
       "kuma.io/unified-name": "self_inbound_dp_8080"
      }
     }
    },
    "trafficDirection": "INBOUND",
    "enableReusePort": true
   },
   "system_dynamicconfig": {
    "name": "system_dynamicconfig",
    "address": {
     "pipe": {
      "path": "kuma-mesh-metric-config.sock"
     }
    },
    "statPrefix": "system_dynamicconfig",
    "filterChains": [
     {
      "filters": [
       {
        "name": "envoy.filters.network.http_connection_manager",
        "typedConfig": {
         "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
         "statPrefix": "system_dynamicconfig",
         "routeConfig": {
          "virtualHosts": [
           {
            "name": "system_dynamicconfig",
            "domains": [
             "*"
            ],
            "routes": [
             {
              "name": "system_dynamicconfig_identity-readiness_not_modified",
              "match": {
               "path": "/identity-readiness",
               "headers": [
                {
                 "name": "If-None-Match",
                 "stringMatch": {
                  "exact": "8376431f05ed0574aa914db9f36153ed5837a067d6d3450847c49d89b37ad1bf"
                 }
                }
               ]
              },
              "directResponse": {
               "status": 304
              }
             },
             {
              "name": "system_dynamicconfig_identity-readiness",
              "match": {
               "path": "/identity-readiness"
              },
              "directResponse": {
               "status": 200,
               "body": {
                "inlineString": "{\"required\":false}"
               }
              },
              "responseHeadersToAdd": [
               {
                "header": {
                 "key": "Etag",
                 "value": "8376431f05ed0574aa914db9f36153ed5837a067d6d3450847c49d89b37ad1bf"
                }
               }
              ]
             }
            ]
           }
          ],
          "maxDirectResponseBodySizeBytes": 18
         },
         "httpFilters": [
          {
           "name": "envoy.filters.http.router",
           "typedConfig": {
            "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
           }
          }
         ],
         "internalAddressConfig": {
          "cidrRanges": [
           {
            "addressPrefix": "127.0.0.1",
            "prefixLen": 32
           }
          ]
         }
        }
       }
      ]
     }
    ]
   }
  }
 }
}
